@@ -120,6 +120,10 @@ ZipFile Objects
    because the default :program:`zip` and :program:`unzip` commands on Unix (the
    InfoZIP utilities) don't support these extensions.
 
+   If the file is created with mode ``'a'`` or ``'w'`` and then
+   :meth:`close`\ d without adding any files to the archive, the appropriate
+   ZIP structures for an empty archive will be written to the file.
+
 
 .. method:: ZipFile.close()
 
