@@ -26,9 +26,10 @@ modulator	Interactively generate boiler plate for an extension
 
 pynche		A Tkinter-based color editor.
 
-scripts		A number of useful single-file programs, e.g. tabnanny.py
-		(by Tim Peters), which checks for inconsistent mixing
-		of tabs and spaces.
+scripts         A number of useful single-file programs, e.g. tabnanny.py
+                by Tim Peters, which checks for inconsistent mixing of
+                tabs and spaces, and 2to3, which converts Python 2 code
+                to Python 3 code.
 
 unicode		Tools used to generate unicode database files for
 		Python 2.0 (by Fredrik Lundh).
