@@ -18,6 +18,10 @@ Library
 
 - Issue #10459: Update CJK character names to Unicode 5.1.
 
+- Issue #1710703: Write structures for an empty ZIP archive when a ZipFile is
+  created in modes 'a' or 'w' and then closed without adding any files. Raise
+  BadZipfile (rather than IOError) when opening small non-ZIP files.
+
 - Issue #4493: urllib.request adds '/' in front of path components which does not
   start with '/. Common behavior exhibited by browsers and other clients.
 
